# GGXrdAutomaticallyChangeAudioDevice

./: GGXrdAutomaticallyChangeAudioDevice.sln  README.md
GGXrdAutomaticallyChangeAudioDevice/: GGXrdAutomaticallyChangeAudioDevice.rc  GGXrdAutomaticallyChangeAudioDevice.vcxproj  GGXrdAutomaticallyChangeAudioDevice.vcxproj.filters  WinError.cpp  asmhooks.asm  dllmain.cpp  endlessunrealstuff.h  logging.h  mod.cpp  mod.h  resource.h  sigscan.cpp  sigscan.h
GGXrdAutomaticallyChangeAudioDeviceInjector/: GGXrdAutomaticallyChangeAudioDeviceInjector.cpp  GGXrdAutomaticallyChangeAudioDeviceInjector.rc  GGXrdAutomaticallyChangeAudioDeviceInjector.vcxproj  GGXrdAutomaticallyChangeAudioDeviceInjector.vcxproj.filters  GGXrdAutomaticallyChangeAudioDeviceInjectorCommon.cpp  Resource.h  prebuild.ps1
GGXrdAutomaticallyChangeAudioDevicePatcher/: CMakeLists.txt  GGXrdAutomaticallyChangeAudioDevicePatcher.cpp  GGXrdAutomaticallyChangeAudioDevicePatcher.rc  GGXrdAutomaticallyChangeAudioDevicePatcher.vcxproj  GGXrdAutomaticallyChangeAudioDevicePatcher.vcxproj.filters  GGXrdAutomaticallyChangeAudioDevicePatcherCommon.cpp  Resource.h  prebuild.ps1
SampleXAudio2_9/: Resource.h  SDKwavefile.cpp  SDKwavefile.h  SampleXAudio2_9.cpp  SampleXAudio2_9.rc  SampleXAudio2_9.vcxproj  SampleXAudio2_9.vcxproj.filters  packages.config
